Copy images to dist directory when generating

--- a/spec/_src/projects/one/images.yml
+++ b/spec/_src/projects/one/images.yml
@@ -1,5 +1,5 @@
 ---
-- path: img/one-1.jpg
+- filename: one-1.jpg
   alt: Sleeping Abe
-- path: img/one-2.jpg
+- filename: one-2.jpg
   alt: More sleeping Abe
